--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 
 body {
   font-size: 1.6rem;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   background-color: var(--lightGrey);
 }
 html {
@@ -22,7 +22,7 @@ html {
   box-sizing: inherit;
 }
 
-.pinup {
+.pinUp {
   overflow: hidden;
   height: 100vh;
 }
@@ -62,7 +62,7 @@ header h1 {
   padding: 10rem 0;
 }
 @media (min-width: 768px) {
-  .formulario {
+  .form {
     padding: 5rem 0;
     width: 60rem;
   }
@@ -77,7 +77,7 @@ header h1 {
   padding-bottom: 1rem;
   border-bottom: 2px solid var(--blue);
 }
-.formu .field {
+.form .field {
   display: grid;
   margin-bottom: 2rem;
 }
@@ -112,7 +112,7 @@ header h1 {
   transition: background-color 300ms ease;
 }
 @media (min-width: 768px) {
-  .formulario input[type='submit'] {
+  .form input[type='submit'] {
     display: block;
     padding: 1rem 5rem;
   }
@@ -148,12 +148,12 @@ header h1 {
 .alert.success {
 }
 
-.contenedor {
+.container {
   width: 90%;
   max-width: 80rem;
   margin: 0 auto;
 }
-.container-budget {
+.budget-container {
   margin-top: -5rem;
 
   display: flex;
@@ -182,34 +182,34 @@ header h1 {
   }
 }
 .form input[type='text'].new-budget,
-.formu input[type='number'].new-budget {
+.form input[type='number'].new-budget {
   font-size: 2.8rem;
   text-align: center;
 }
 
-.container-budget svg {
+.budget-container svg {
   width: 25rem;
 }
 
-.content-budget {
+.budget-content {
   width: 100%;
 }
-.content-budget p {
+.budget-content p {
   font-weight: 400;
   color: var(--darkGrey);
   font-size: 2.4rem;
   text-align: center;
 }
 @media (min-width: 768px) {
-  .content-budget p {
+  .budget-content p {
     text-align: left;
   }
 }
-.content-budget p.neg,
-.content-budget p.neg span {
+.budget-content p.neg,
+.budget-content p.neg span {
   color: red;
 }
-.content-budget span {
+.budget-content span {
   font-weight: 900;
   color: var(--blue);
 }
@@ -254,10 +254,10 @@ main {
   background-color: var(--darkGrey);
 }
 
-.list-bills {
+.bills-list {
   margin-top: 5rem;
 }
-.list-bills h2 {
+.bills-list h2 {
   color: var(--darkGrey);
   font-weight: 900;
 }
@@ -275,48 +275,48 @@ main {
   width: 100%;
 }
 
-.cantidad-gasto {
+.bill-amount {
   font-size: 2.4rem;
   color: var(--black);
   font-weight: 900;
 }
 
-.contente-bill {
+.bill-content {
   display: flex;
   align-items: center;
   gap: 2rem;
 }
 
-.contente-bill img {
+.bill-content img {
   width: 10rem;
 }
 
-.description-bill p {
+.bill-description p {
   margin: 0 0 0.3rem 0;
 }
-.description-bill .category {
+.bill-description .category {
   color: var(--grey);
   font-size: 1.6rem;
   font-weight: 900;
   text-transform: uppercase;
 }
-.description-bill p {
+.bill-description p {
   margin-bottom: 1rem;
 }
-.description-bill .name-bill {
+.bill-description .bill-name {
   color: var(--darkGrey);
   font-size: 2.4rem;
   font-weight: 700;
 }
-.descripcion-gasto .name-bill:hover {
+.bill-description .bill-name:hover {
   cursor: pointer;
 }
-.description-bill .date-bill {
+.bill-description .bill-date {
   font-size: 1.8rem;
   font-weight: 900;
   color: var(--darkGrey);
 }
-.description-bill .date-bill span {
+.bill-description .bill-date span {
   font-weight: 400;
 }
 
