--- a/src/index.css
+++ b/src/index.css
@@ -254,19 +254,19 @@ main {
   background-color: var(--darkGrey);
 }
 
-.bills-list {
+.spends-list {
   margin-top: 5rem;
 }
-.bills-list h2 {
+.spends-list h2 {
   color: var(--darkGrey);
   font-weight: 900;
 }
-.no-bill {
+.no-spend {
   text-align: center;
   font-size: 2.2rem;
 }
 
-.bill {
+.spend {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -275,67 +275,67 @@ main {
   width: 100%;
 }
 
-.bill-amount {
+.spend-amount {
   font-size: 2.4rem;
   color: var(--black);
   font-weight: 900;
 }
 
-.bill-content {
+.spend-content {
   display: flex;
   align-items: center;
   gap: 2rem;
 }
 
-.bill-content img {
+.spend-content img {
   width: 10rem;
 }
 
-.bill-description p {
+.spend-description p {
   margin: 0 0 0.3rem 0;
 }
-.bill-description .category {
+.spend-description .category {
   color: var(--grey);
   font-size: 1.6rem;
   font-weight: 900;
   text-transform: uppercase;
 }
-.bill-description p {
+.spend-description p {
   margin-bottom: 1rem;
 }
-.bill-description .bill-name {
+.spend-description .spend-name {
   color: var(--darkGrey);
   font-size: 2.4rem;
   font-weight: 700;
 }
-.bill-description .bill-name:hover {
+.spend-description .spend-name:hover {
   cursor: pointer;
 }
-.bill-description .bill-date {
+.spend-description .spend-date {
   font-size: 1.8rem;
   font-weight: 900;
   color: var(--darkGrey);
 }
-.bill-description .bill-date span {
+.spend-description .spend-date span {
   font-weight: 400;
 }
 
-.new-bill {
+.new-spend {
   position: fixed;
   bottom: 5rem;
   right: 5rem;
 }
 
-.new-bill img {
+.new-spend img {
   width: 5rem;
 }
-.new-bill img:hover {
+.new-spend img:hover {
   cursor: pointer;
 }
 
 .modal {
   position: absolute;
-  background-color: rgb(0 0 0 / 0.92);
+  background-color: rgb(0 0 0 / 0.6);
   top: 0;
   left: 0;
   right: 0;
