--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,20 @@ h2 {
   font-size: 3rem;
 }
 
+.personal-link {
+  display: flex;
+  justify-content: center;
+}
+
+.personal-link a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.personal-link span {
+  color: var(--lightGrey);
+}
+
 .shade {
   box-shadow: 0px 9px 10px -10px rgba(0, 0, 0, 0.51);
   -webkit-box-shadow: 0px 9px 10px -10px rgba(0, 0, 0, 0.51);
@@ -335,7 +349,7 @@ main {
 
 .modal {
   position: absolute;
-  background-color: rgb(0 0 0 / 0.6);
+  background-color: rgb(0 0 0 / 0.8);
   top: 0;
   left: 0;
   right: 0;
