--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 :root {
-  --blue: #3b82f6;
+  --color-primary: #217a43;
+  --color-primary-light: #69bc5f;
+  --color-secondary: #1a788a;
+  --color-secondary-light: #1f8ba2;
   --white: #ffffff;
   --lightGrey: #f5f5f5;
   --grey: #94a3b8;
@@ -58,7 +61,7 @@ h2 {
 }
 
 header {
-  background-color: var(--blue);
+  background-color: var(--color-primary);
 }
 
 header h1 {
@@ -89,7 +92,7 @@ header h1 {
   color: var(--white);
   margin-bottom: 4rem;
   padding-bottom: 1rem;
-  border-bottom: 2px solid var(--blue);
+  border-bottom: 2px solid var(--color-primary);
 }
 .form .field {
   display: grid;
@@ -97,7 +100,7 @@ header h1 {
 }
 
 .form label {
-  color: var(--blue);
+  color: var(--color-primary);
   font-size: 2.8rem;
   text-align: center;
   margin-bottom: 2rem;
@@ -113,7 +116,7 @@ header h1 {
   font-size: 1.6rem;
 }
 .form input[type='submit'] {
-  background-color: #1048a4;
+  background-color: var(--color-secondary);
   border: none;
   padding: 1rem;
   text-align: center;
@@ -132,7 +135,8 @@ header h1 {
   }
 }
 .form input[type='submit']:hover {
-  background-color: #042a67;
+  background-color: var(--color-secondary-light);
+  color: var(--white);
   cursor: pointer;
 }
 
@@ -225,7 +229,7 @@ header h1 {
 }
 .budget-content span {
   font-weight: 900;
-  color: var(--blue);
+  color: var(--color-primary);
 }
 .reset-app {
   border: none;
@@ -400,7 +404,7 @@ body .modal {
 
 /*** SWIPE LIST OVERRIDES **/
 .swipe-action__leading {
-  background-color: var(--blue);
+  background-color: var(--color-primary);
   color: var(--white);
   margin-bottom: 2rem;
 }
