--- a/src/index.css
+++ b/src/index.css
@@ -225,7 +225,7 @@ header h1 {
 }
 .budget-content p.neg,
 .budget-content p.neg span {
-  color: red;
+  color: #dc2626;
 }
 .budget-content span {
   font-weight: 900;
