--- a/src/index.css
+++ b/src/index.css
@@ -95,7 +95,8 @@ header h1 {
   border-bottom: 2px solid var(--color-primary);
 }
 .form .field {
-  display: grid;
+  display: flex;
+
   margin-bottom: 2rem;
 }
 
@@ -128,7 +129,7 @@ header h1 {
   width: 100%;
   transition: background-color 300ms ease;
 }
-@media (min-width: 768px) {
+@media (min-width: 420px) {
   .form input[type='submit'] {
     display: block;
     padding: 1rem 5rem;
@@ -162,8 +163,6 @@ header h1 {
   background-color: var(--white);
   border-left: 5px solid #b91c1c;
   color: #b91c1c;
-}
-.alert.success {
 }
 
 .container {
@@ -203,6 +202,27 @@ header h1 {
 .form input[type='number'].new-budget {
   font-size: 2.8rem;
   text-align: center;
+}
+
+.field-budget {
+  display: flex;
+  flex-direction: column;
+}
+
+.field-budget label,
+.field-budget input {
+  text-align: center;
+  font-weight: 600;
+  background-color: var(--lightGrey);
+  border-radius: 1rem;
+  padding: 1rem;
+  border: none;
+  flex: 1;
+  font-size: 2rem;
+}
+
+.field-budget label {
+  font-weight: 600;
 }
 
 .budget-container svg {
